--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -49,7 +49,7 @@
     "build": "cp src/build.tsx src/index.tsx && GENERATE_SOURCEMAP=false react-scripts build && yarn dist:sdk",
     "build:dist": "yarn build && yarn dist:sample",
     "dist:sample": "mkdir -p ../sample-widgets-app/public/lib/js && cp build/static/js/main.*.js ../sample-widgets-app/public/lib/js/imtbl-checkout.js",
-    "dist:sdk": "mkdir -p ../../../publish/dist/browser && cp build/static/js/main.*.js ../../../publish/dist/browser/checkout.js",
+    "dist:sdk": "mkdir -p ../../../sdk/dist/browser && cp build/static/js/main.*.js ../../../sdk/dist/browser/checkout.js",
     "eject": "react-scripts eject",
     "start": "cp src/app.tsx src/index.tsx && PORT=3001 GENERATE_SOURCEMAP=false react-scripts start",
     "test": "react-scripts test"
