--- a/sdk/package.json
+++ b/sdk/package.json
@@ -11,8 +11,6 @@
     "@imtbl/core-sdk": "^1.0.2-alpha.5",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
     "axios": "^1.3.5",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
@@ -77,6 +75,7 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "./dist/index.cjs",
+  "peerDependencies": {},
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "yarn packageList && yarn updateDependencies && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
