--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -52,6 +52,6 @@
     "dist:sdk": "mkdir -p ../../../sdk/dist/browser && cp build/static/js/main.*.js ../../../sdk/dist/browser/checkout.js",
     "eject": "react-scripts eject",
     "start": "cp src/app.tsx src/index.tsx && PORT=3001 GENERATE_SOURCEMAP=false react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test --passWithNoTests"
   }
 }
