--- a/.github/workflows/alpha_publish.yaml
+++ b/.github/workflows/alpha_publish.yaml
@@ -22,9 +22,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -62,4 +67,3 @@ jobs:
           access: public
           package: ./sdk/package.json
           tag: alpha
-          dry-run: true
