--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -91,7 +91,7 @@ jobs:
         id: version
         run: |
           echo "$(ls)"
-          echo "NEXT_VERSION=$(.github/scripts/version.sh --${{github.event.inputs.release_type }} --${{ github.event.inputs.upgrade_type }} --${{ github.event.inputs.pre_release_revision }})">> $GITHUB_OUTPUT
+          echo "NEXT_VERSION=$(.github/scripts/version-up.sh --${{github.event.inputs.release_type }} --${{ github.event.inputs.upgrade_type }} --${{ github.event.inputs.pre_release_revision }})">> $GITHUB_OUTPUT
         shell: bash
 
       - name: Print Next Version
