--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -19,10 +19,12 @@
   "devDependencies": {
     "@parcel/transformer-sass": "2.8.3",
     "@parcel/transformer-typescript-tsc": "^2.8.3",
+    "assert": "^2.0.0",
     "lit": "^2.7.0",
-    "parcel": "^2.8.3",
     "parcel-bundler": "^1.12.3",
+    "parcel": "^2.8.3",
     "rimraf": "^5.0.0",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5"
   },
   "engines": {
