--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,6 +41,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      
+      - name: Get tags
+        run: git fetch --tags
+
+      - name: Get tags
+        run: git describe --tags
 
       - name: Setup Node
         uses: actions/setup-node@v3
