[Economy] Migrate economy module to yarn workspaces (#120)

--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "packages/checkout/sdk-sample-app",
     "packages/checkout/widgets",
     "packages/checkout/widgets-sample-app",
-    "packages/checkout/widgets-types"
+    "packages/checkout/widgets-types",
+    "packages/economy/sdk",
+    "packages/economy/playground"
   ]
 }
