--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -28,13 +28,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "cypress": "^12.8.1",
+    "jest": "^29.5.0",
     "local-cypress": "^1.2.6",
     "react-scripts": "5.0.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +54,8 @@
     "dist:sdk": "mkdir -p ../../../sdk/dist/browser && cp build/static/js/main.*.js ../../../sdk/dist/browser/checkout.js",
     "eject": "react-scripts eject",
     "start": "cp src/app.tsx src/index.tsx && PORT=3001 GENERATE_SOURCEMAP=false react-scripts start",
-    "test": "react-scripts test --passWithNoTests"
+    "test": "react-scripts test --passWithNoTests",
+    "test:cypress": "NODE_ENV=test cypress run --component --headless",
+    "test:cypress:open": "NODE_ENV=test cypress open --component --browser electron"
   }
 }
