--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,12 +17,12 @@ on:
         type: choice
         description: Upgrade Type
         options:
+          - ""
           - patch
           - minor
           - major
-          - ""
         required: true
-        default: patch
+        default: ""
       pre_release_revision:
         type: choice
         description: '(Optional) Pre release revision bump'
@@ -113,6 +113,15 @@ jobs:
           package: ./sdk/package.json
           tag: ${{ steps.version.outputs.NEXT_VERSION }}
           dry-run: true
+
+      - name: Print New Version
+        id: publish
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.PLATFORM_SA_NPM_TOKEN }}
+      - if: steps.publish.outputs.type != 'none'
+        run: |
+          echo "Version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
 
       # - name: Authenticate NPM
       #   run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.PLATFORM_SA_NPM_TOKEN }}
