--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -90,7 +90,8 @@ jobs:
       - name: Get next version string
         id: version
         run: |
-          echo "$(./.github/scripts/version-up.sh --${{github.event.inputs.release_type }} --${{ github.event.inputs.upgrade_type }} --apply --${{ github.event.inputs.pre_release_revision }})"
+          echo ${{ contains(github.event.inputs.release_type, "alpha") && -e || ''}}
+          echo "$(./.github/scripts/version-up.sh --${{github.event.inputs.release_type }} --${{ github.event.inputs.upgrade_type }} --apply ${{ contains(github.event.inputs.release_type, "alpha") && -e || ''}})"
           echo "$(git push --tags)"
           echo "NEXT_VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
         shell: bash
