--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
+    "node-gyp": "^9.3.1",
     "prettier": "^2.8.7",
     "release-it": "^15.10.1",
     "syncpack": "^9.8.4",
@@ -51,6 +52,7 @@
     "packages/passport",
     "packages/provider",
     "packages/internal/toolkit",
+    "packages/internal/dex",
     "packages/checkout/sdk",
     "packages/checkout/sdk-sample-app",
     "packages/checkout/widgets",
