--- a/sdk/package.json
+++ b/sdk/package.json
@@ -11,6 +11,9 @@
     "@imtbl/core-sdk": "^1.0.2-alpha.5",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@swc/helpers": "~0.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "axios": "^1.3.5",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
@@ -18,7 +21,8 @@
     "oidc-client-ts": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
