--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -22,16 +22,16 @@
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.3",
     "@uniswap/v3-sdk": "^3.9.0",
-    "ethers": "^5.7.0"
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
+    "@swc/core": "^1.3.36",
+    "@swc/jest": "^0.2.24",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "@types/node": "^18.14.2",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
@@ -40,7 +40,8 @@
   "scripts": {
     "test": "jest test",
     "test:watch": "jest --watch",
-    "lint": "eslint ./src --ext .ts --max-warnings=0"
+    "lint": "eslint ./src --ext .ts --max-warnings=0",
+    "lint:fix": "cd ../../../ && yarn wsrun -p ./ -c lint --fix"
   },
   "engines": {
     "node": ">=16.0.0"
